--- a/app/css/about.css
+++ b/app/css/about.css
@@ -1,3 +1,19 @@
+html, body {
+  height: 100%; }
+
 body {
-  background: #fafafa;
-  color: #309dd0; }
+  background-color: #fafafa; }
+
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  position: relative; }
+
+.empty {
+  height: 60px; }
+
+.footer {
+  height: 60px;
+  margin-top: -60px;
+  position: relative;
+  background-color: #acacac; }
