--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -2,5 +2,36 @@
 	height: $footer;
 	margin-top: -$footer;
 	position: relative;
-	background-color: #acacac;
+	background: linear-gradient(to bottom, $colorWhite, $colorGrey);
+	box-shadow: 0px -1px 0px 0px rgba(0,0,0,0.1);
+	color: #727070;
+	font-size: 12px;
+}
+.copyright{
+	width: 650px;
+	float: left;
+	line-height: $footer;
+	font-family: "OpenSans-Light";
+}
+.login{
+	width: 310px;
+	float: left;
+	line-height: $footer;
+}
+.sprite-locked{
+	width: 19px;
+	height: 22px;
+	background-image: url(../img/sprit.png);
+	background-position: -213px -10px;
+	margin-top: 19px;
+	float: left;
+	&:hover{
+		background-position: -270px -150px;
+	}
+}
+
+.log{
+	float: left;
+	padding: 0 0 0 10px;
+	font-family: "OpenSans-Bold";
 }
