--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -2,3 +2,13 @@ $footer : 60px;
 
 $colorWhite: #ffffff;
 $colorGrey: #f0f0f0;
+
+$activNavColor: #1e7465;
+$color: #727070;
+
+
+ul{
+	list-style: none;
+	padding:0;
+	margin: 0;
+}
