--- a/app/sass/_layouts.scss
+++ b/app/sass/_layouts.scss
@@ -22,9 +22,26 @@ body {
 .container{
 	@include clearfix();
 	width: 960px;
+	margin: 35px auto;
+}
+.container-footer{
+	@include clearfix();
+	width: 960px;
 	margin: auto;
 }
 .container-wide{
 	width: 1200px;
+	height: 100%;
 	margin: auto; 
+	position: relative;
+}
+.aside{
+	float: left;
+	width: 250px;
+	margin: 0 60px 0 0;
+}
+.content-area{
+	float: left;
+	background-color: #acacac;
+	width: 650px;
 }
