--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -3,7 +3,7 @@
 	margin-top: -$footer;
 	position: relative;
 	background: linear-gradient(to bottom, $colorWhite, $colorGrey);
-	box-shadow: 0px -1px 0px 0px rgba(0,0,0,0.1);
+	box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.1);
 	color: #727070;
 	font-size: 12px;
 }
