--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -1,9 +1,9 @@
 .header{
-	background-image: url(../img/bgheader.jpg) ;
+	background-image: url(../img/bgheader.jpg);
 	width: 100%;
 	height: 90px;
 	border-bottom: 7px solid #ffffff;
-	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.1);
+	box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 .social-icon{
