--- a/app/css/about.css
+++ b/app/css/about.css
@@ -148,6 +148,8 @@ body {
 .nav-item {
   font-family: "OpenSans-Semibold";
   font-size: 20px;
+  color: #727070;
+  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
   background-image: -webkit-linear-gradient(top, white 0%, #fbf9f9 6%, #e9e6e5 100%);
   background-image: linear-gradient(to bottom, white 0%, #fbf9f9 6%, #e9e6e5 100%);
   box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07), inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05); }
@@ -267,7 +269,7 @@ h1 {
   box-sizing: border-box;
   float: left;
   width: 230px;
-  padding: 0 0 0 42px; }
+  padding: 10px 0 0 42px; }
 
 .photo-box {
   box-sizing: border-box;
@@ -283,13 +285,10 @@ h1 {
 
 .about-me-description {
   box-sizing: border-box;
-  float: left;
+  margin-left: 230px;
   width: 420px;
   padding: 0 42px 0 0;
   color: #727070; }
-
-.about-me-description-list :last-child {
-  padding: 10px 0 0 0; }
 
 .about-me-description-list span {
   font-family: "OpenSans"; }
@@ -298,10 +297,12 @@ h1 {
   line-height: 25px; }
 
 .description {
-  padding: 30px 42px; }
+  padding: 47px 42px 20px 42px;
+  line-height: 21px;
+  font-size: 14px; }
 
 .description-list li {
-  margin-left: 90px; }
+  margin-left: 97px; }
 
 .description-list span {
   display: block;
@@ -313,13 +314,14 @@ h1 {
   border-bottom: 1px solid #dbdbda;
   box-shadow: 0px 1px 1px 0px rgba(251, 251, 251, 0.75);
   border-radius: 1px;
-  margin: 10px 0 10px -90px; }
+  margin: 25px 0 25px -97px; }
 
 .description-list li:last-child:after {
   content: " ";
   display: block;
   border-bottom: none;
-  box-shadow: none; }
+  box-shadow: none;
+  padding-bottom: 0px; }
 
 .description-list li:before {
   content: "";
@@ -329,25 +331,58 @@ h1 {
   display: block;
   background-repeat: no-repeat; }
 
-li.case:before {
+li.case:before, li.school:before, li.graduate:before, li.file:before {
   background-image: url(../img/sprit.png);
   background-position: -40px -10px;
-  margin-left: -90px; }
+  margin-left: -97px;
+  margin-top: -7px; }
 
 li.school:before {
-  background-image: url(../img/sprit.png);
-  background-position: -252px -10px;
-  margin-left: -90px; }
+  background-position: -252px -10px; }
 
 li.graduate:before {
-  background-image: url(../img/sprit.png);
-  background-position: -134px -149px;
-  margin-left: -90px; }
+  background-position: -134px -149px; }
 
 li.file:before {
-  background-image: url(../img/sprit.png);
-  background-position: -176px -74px;
-  margin-left: -90px; }
+  background-position: -176px -74px; }
+
+.skill {
+  padding-top: 10px;
+  float: left; }
+
+.skill-item {
+  background: url(../img/skill.png) repeat-x;
+  height: 25px;
+  vertical-align: middle;
+  display: inline-block;
+  font-size: 9px;
+  padding: 0;
+  color: #1e7465;
+  line-height: 11px; }
+  .skill-item:before {
+    content: "";
+    background: url(../img/skillberofe.png) no-repeat;
+    display: inline-block;
+    min-width: 12px;
+    min-height: 25px;
+    vertical-align: middle;
+    right: 12px;
+    position: relative; }
+  .skill-item:after {
+    content: "";
+    background: url(../img/skillafter.png) no-repeat;
+    display: inline-block;
+    min-width: 8px;
+    min-height: 25px;
+    vertical-align: middle;
+    left: 8px;
+    position: relative; }
+
+.skill-list {
+  margin: 10px 0 0 145px; }
+  .skill-list li {
+    display: inline-block;
+    padding: 0 10px; }
 
 .footer {
   height: 60px;
