--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -271,128 +271,6 @@ body {
     .contacts-item a.email {
       text-decoration: underline; }
 
-.section {
-  margin-bottom: 35px;
-  box-sizing: border-box;
-  font-family: "OpenSans-Semibold";
-  font-size: 14px;
-  color: #727070; }
-
-.photo {
-  box-sizing: border-box;
-  float: left;
-  width: 230px;
-  padding: 10px 0 0 42px; }
-
-.photo-box {
-  box-sizing: border-box;
-  width: 151px;
-  height: 151px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 10px solid #f6f5f4;
-  box-shadow: 0px 0px 0px 1px #dddcdb; }
-
-.photo-box img {
-  width: 100%; }
-
-.about-me-description {
-  box-sizing: border-box;
-  margin-left: 230px;
-  width: 420px;
-  padding: 0 42px 0 0;
-  color: #727070; }
-
-.about-me-description-list span {
-  font-family: "OpenSans"; }
-
-.about-me-description-list li {
-  line-height: 25px; }
-
-.description-list li {
-  margin-left: 97px; }
-
-.description-list span {
-  display: block;
-  font-family: "OpenSans"; }
-
-.description-list li:after {
-  content: " ";
-  display: block;
-  border-bottom: 1px solid #dbdbda;
-  box-shadow: 0px 1px 1px 0px rgba(251, 251, 251, 0.75);
-  border-radius: 1px;
-  margin: 25px 0 25px -97px; }
-
-.description-list li:last-child:after {
-  content: " ";
-  display: block;
-  border-bottom: none;
-  box-shadow: none;
-  padding-bottom: 0px; }
-
-.description-list li:before {
-  content: "";
-  width: 54px;
-  height: 55px;
-  float: left;
-  display: block;
-  background-repeat: no-repeat; }
-
-li.case:before, li.school:before, li.graduate:before, li.file:before {
-  background-image: url(../img/sprit.png);
-  background-position: -40px -10px;
-  margin-left: -97px;
-  margin-top: -7px; }
-
-li.school:before {
-  background-position: -252px -10px; }
-
-li.graduate:before {
-  background-position: -134px -149px; }
-
-li.file:before {
-  background-position: -176px -74px; }
-
-.skill {
-  padding-top: 10px;
-  float: left; }
-
-.skill-item {
-  background: url(../img/skill.png) repeat-x;
-  min-height: 25px;
-  vertical-align: middle;
-  display: inline-block;
-  font-size: 9px;
-  padding: 0;
-  color: #1e7465;
-  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.45);
-  line-height: 11px; }
-  .skill-item:before {
-    content: "";
-    background: url(../img/skillberofe.png) no-repeat;
-    display: inline-block;
-    min-width: 10px;
-    min-height: 25px;
-    vertical-align: middle;
-    right: 9px;
-    position: relative; }
-  .skill-item:after {
-    content: "";
-    background: url(../img/skillafter.png) no-repeat;
-    display: inline-block;
-    min-width: 6px;
-    min-height: 25px;
-    vertical-align: middle;
-    left: 5px;
-    position: relative; }
-
-.skill-list {
-  margin: 10px 0 0 145px; }
-  .skill-list li {
-    display: inline-block;
-    padding: 0 10px; }
-
 .footer {
   height: 60px;
   margin-top: -60px;
@@ -428,3 +306,92 @@ li.file:before {
   float: left;
   padding: 0 0 0 10px;
   font-family: "OpenSans-Bold"; }
+
+.project {
+  padding-bottom: 20px; }
+  .project:before, .project:after {
+    content: "";
+    display: table; }
+  .project:after {
+    clear: both; }
+
+.project-row {
+  margin: 0 0 33px 0; }
+  .project-row:before, .project-row:after {
+    content: "";
+    display: table; }
+  .project-row:after {
+    clear: both; }
+
+.project-item {
+  float: left;
+  width: 166px;
+  box-sizing: border-box;
+  background: black;
+  overflow: hidden;
+  border: 1px solid #b6b6b6;
+  box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07);
+  border-radius: 5px;
+  background: -webkit-linear-gradient(bottom, #edebea 0%, #fbf9f9 94%, white 100%);
+  background: linear-gradient(to top, #edebea 0%, #fbf9f9 94%, white 100%); }
+  .project-item:nth-child(2) {
+    margin: 0 33px; }
+
+.project-pic {
+  box-sizing: border-box;
+  width: 166px;
+  overflow: hidden;
+  height: 119px;
+  border-bottom: 1px solid #b6b6b6;
+  position: relative; }
+  .project-pic img {
+    width: 100%; }
+  .project-pic a {
+    display: block;
+    background: #6f6d6d;
+    opacity: .41; }
+    .project-pic a:hover {
+      opacity: 1;
+      -webkit-transition: opacity .1s linear;
+      transition: opacity .1s linear; }
+
+.project-name {
+  font-family: "OpenSans-Semibold";
+  background: rgba(65, 64, 64, 0.071);
+  font-size: 13px;
+  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
+  text-align: center;
+  line-height: 32px; }
+
+.poject-description {
+  font-family: "OpenSans";
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  padding: 8px; }
+
+.project-add {
+  text-align: center; }
+  .project-add a {
+    display: block;
+    text-decoration: none;
+    color: #727070;
+    min-height: 135px; }
+    .project-add a:hover {
+      background-color: #d7d7d7;
+      box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 0px 0px rgba(199, 199, 199, 0.75); }
+    .project-add a img {
+      padding: 17px 0 0 0; }
+    .project-add a span {
+      display: block;
+      padding: 10px 0 0 0px;
+      font-family: "OpenSans-Semibold";
+      font-size: 14px;
+      text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75); }
+    .project-add a .wrap-img {
+      box-shadow: 0px 2px 0px 0px rgba(255, 255, 255, 0.75), inset 1px 1px 0px 0px rgba(199, 199, 199, 0.75);
+      display: inline-block;
+      border-radius: 50px;
+      width: 55px;
+      height: 55px;
+      margin: 25px 0 0 0; }
