correction css for callback.html

--- a/app/css/callback.css
+++ b/app/css/callback.css
@@ -329,11 +329,14 @@ body {
   font-family: "OpenSans-Light";
   font-size: 12px;
   border: 1px solid #d6d4d3;
-  border-radius: 2px;
+  border-radius: 3px;
   padding: 10px;
   width: 190px;
   vertical-align: top;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background: -webkit-linear-gradient(top, #fbfcfd 0%, #f3f3f3 100%);
+  background: linear-gradient(to bottom, #fbfcfd 0%, #f3f3f3 100%);
+  box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.35), inset 0px 2px 2px 0px rgba(114, 112, 112, 0.1); }
 
 .callback-input-margin {
   margin-right: 25px; }
@@ -354,7 +357,7 @@ body {
 
 .capcha-generate {
   border: 1px solid #d6d4d3;
-  border-radius: 2px;
+  border-radius: 3px;
   background: #fbfcfd;
   width: 180px;
   height: 66px;
@@ -387,11 +390,34 @@ body {
 
 .callback-button {
   padding: 10px 25px;
-  border: 1px solid red;
+  color: #727070;
+  border: 1px solid #c5c5c5;
   border-radius: 5px;
   font-family: "OpenSans-Semibold";
+  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
   font-size: 14px;
-  margin: 30px; }
+  margin: 30px;
+  box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07), inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
+  background: -webkit-linear-gradient(top, #fefefd 0%, #e9e6e5 94%, white 100%);
+  background: linear-gradient(to bottom, #fefefd 0%, #e9e6e5 94%, white 100%); }
+  .callback-button:hover {
+    box-shadow: inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
+    background: -webkit-linear-gradient(bottom, #c2c0c0 0%, #e3e1e1 87%, #e6e4e4 90%, #e8e7e7 100%);
+    background: linear-gradient(to top, #c2c0c0 0%, #e3e1e1 87%, #e6e4e4 90%, #e8e7e7 100%); }
+
+.callback-button-submit {
+  background: -webkit-linear-gradient(bottom, #43b796 0%, #80e8cb 100%);
+  background: linear-gradient(to top, #43b796 0%, #80e8cb 100%);
+  box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.16), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.3);
+  border-top: 1px solid #6adbbc;
+  border-left: #44ac8f;
+  border-right: #44ac8f;
+  border-bottom: #34a282;
+  color: #1e7465; }
+  .callback-button-submit:hover {
+    box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.3);
+    background: -webkit-linear-gradient(bottom, #3aa087 0%, #5fdcbd 100%);
+    background: linear-gradient(to top, #3aa087 0%, #5fdcbd 100%); }
 
 .button:before, .button:after {
   content: "";
