--- a/app/sass/_main-callback.scss
+++ b/app/sass/_main-callback.scss
@@ -16,6 +16,9 @@
 	box-sizing: border-box;
 	background: linear-gradient( to bottom, #fbfcfd 0%, #f3f3f3 100%);
 	box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.35),inset 0px 2px 2px 0px rgba(114, 112, 112, 0.1);
+	&:focus{
+		outline-color: #cb6945;
+	}
 }
 .callback-input-margin{
 	margin-right: 25px;
@@ -61,6 +64,7 @@
 	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
 	font-size: 14px;
 	margin: 30px;
+	outline: none;
 	box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07),inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
 	background: linear-gradient( to bottom, #fefefd 0%, #e9e6e5 94%, rgb(255,255,255) 100%);
 	&:hover{
