--- a/app/sass/_main-project.scss
+++ b/app/sass/_main-project.scss
@@ -6,7 +6,7 @@
 	margin: 0 0 33px 0;
 	@include clearfix();
 }
-.project-item{
+.project-wrap{
 	float: left;
 	width: 166px;
 	box-sizing: border-box;
@@ -21,25 +21,17 @@
 	background: linear-gradient( to top, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
 }
 .project-pic{
-	box-sizing: border-box;
-	width: 166px;
-	overflow: hidden;
-	height: 119px;
-	border-bottom: 1px solid #b6b6b6;
-	position: relative;
-	img{
-		width: 100%;
-	}
-	a{
-		display: block;
-		background: #6f6d6d;
-		opacity: .41;
-		&:hover{
-			opacity: 1;
-			transition: opacity .1s linear ;
-		}
-	}
-	
+  overflow: hidden;
+  height: 119px;
+  position: relative;
+  background: #6f6d6d;
+  opacity: .41;
+  &:hover{
+    opacity: 1;
+  }
+}
+.wrap-image-link{
+  display: block;
 }
 .project-name{
 	font-family: "OpenSans-Semibold";
@@ -55,6 +47,29 @@
 	line-height: 16px;
 	text-align: center;
 	padding: 8px;
+}
+.more-project{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  &:hover .more-link{
+    opacity: 1;
+  }
+   
+}
+  .more-link{
+  position: absolute;
+  left: 35px;
+  top: 45%;
+  opacity: 0;
+  color: #757374;
+  border: 1px solid #b2b2b2;
+  background: rgba(247, 247, 247, .9);
+  text-decoration: none;
+  padding: 5px 7px;
+  border-radius: 5px;
 }
 .project-add{
 	text-align: center;
@@ -87,7 +102,5 @@
 		height: 55px;
 		margin:25px 0 0 0;
 	}
-
 	}
-	
 }
